spike-iter-3/compile-fail/tests/ui/engine_dispatch_capability.stderr
error[E0277]: the trait bound `ApiKeyCredential: Refreshable` is not satisfied
  --> tests/ui/engine_dispatch_capability.rs:10:14
   |
10 |     let _d = RefreshDispatcher::<ApiKeyCredential>::for_credential();
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Refreshable` is not implemented for `ApiKeyCredential`
   |
help: the following other types implement trait `Refreshable`
  --> $WORKSPACE/credential-proto-builtin/src/lib.rs
   |
   | impl Refreshable for OAuth2Credential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `OAuth2Credential`
...
   | impl Refreshable for SalesforceJwtCredential {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SalesforceJwtCredential`
note: required by a bound in `RefreshDispatcher`
  --> $WORKSPACE/credential-proto/src/lib.rs
   |
   | pub struct RefreshDispatcher<C: Refreshable> {
   |                                 ^^^^^^^^^^^ required by this bound in `RefreshDispatcher`

error[E0599]: the function or associated item `for_credential` exists for struct `RefreshDispatcher<ApiKeyCredential>`, but its trait bounds were not satisfied
  --> tests/ui/engine_dispatch_capability.rs:10:53
   |
10 |     let _d = RefreshDispatcher::<ApiKeyCredential>::for_credential();
   |                                                     ^^^^^^^^^^^^^^ function or associated item cannot be called on `RefreshDispatcher<ApiKeyCredential>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/credential-proto-builtin/src/lib.rs
   |
   | pub struct ApiKeyCredential;
   | --------------------------- doesn't satisfy `ApiKeyCredential: Refreshable`
   |
   = note: the following trait bounds were not satisfied:
           `ApiKeyCredential: Refreshable`
